--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
+    "build-node": "export SKADAPTER=node && svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
@@ -36,7 +37,9 @@
   },
   "dependencies": {
     "@ons/design-system": "^45.2.2",
+    "@sveltejs/adapter-node": "^1.0.0-next.72",
     "d3-dsv": "^2.0.0",
+    "dotenv": "^16.0.0",
     "mapbox-gl": "^1.13.2",
     "rxjs": "^7.5.4",
     "normalize.css": "^8.0.1"
