--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,33 @@
-module.exports = {
-  root: true,
-  parser: "@typescript-eslint/parser",
-  extends: ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
-  plugins: ["svelte3", "@typescript-eslint"],
-  ignorePatterns: ["*.cjs"],
-  overrides: [{ files: ["*.svelte"], processor: "svelte3/svelte3" }],
-  settings: {
-    "svelte3/typescript": () => require("typescript"),
+{
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+  "plugins": ["svelte3", "@typescript-eslint"],
+  "ignorePatterns": ["*.cjs"],
+  "overrides": [{ "files": ["*.svelte"], "processor": "svelte3/svelte3" }],
+  "settings": {
+    "svelte3/typescript": "() => require('typescript')"
   },
-  parserOptions: {
-    sourceType: "module",
-    ecmaVersion: 2020,
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2020
   },
-  env: {
-    browser: true,
-    es2017: true,
-    node: true,
+  "env": {
+    "browser": true,
+    "es2017": true,
+    "node": true
   },
-};
+  "rules": {
+    "prettier/prettier": "error",
+    "no-unused-vars": [1],
+    "no-alert": 0,
+    "strict": [2, "never"],
+    "new-cap": [0],
+    "consistent-return": 0,
+    "no-underscore-dangle": 0,
+    "no-var": [1],
+    "one-var": [0],
+    "max-len": [0, { "code": 140, "ignoreUrls": true }],
+    "comma-dangle": ["error", "always-multiline"]
+  }
+}
