--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "lint:prettier": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
+    "lint:eslint": "eslint --ignore-path .gitignore .",
+    "format:prettier": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "format:eslint": "eslint --ignore-path .gitignore . --fix"
   },
   "type": "module",
   "devDependencies": {
