--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "type": "module",
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-auto": "^1.0.0-next.33",
     "@sveltejs/adapter-node": "^1.0.0-next.72",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "^1.0.0-next.299",
     "@types/d3-dsv": "^3.0.0",
     "@types/jest": "^27.4.1",
     "@types/mapbox-gl": "^2.6.1",
@@ -46,7 +46,6 @@
   },
   "dependencies": {
     "@ons/design-system": "^45.2.2",
-    "@sveltejs/adapter-node": "^1.0.0-next.72",
     "d3-dsv": "^2.0.0",
     "fuse.js": "^3.6.1",
     "mapbox-gl": "^1.13.2",
