--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:prettier": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
     "lint:eslint": "eslint --ignore-path .gitignore .",
     "format:prettier": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "format:eslint": "eslint --ignore-path .gitignore . --fix"
+    "format:eslint": "eslint --ignore-path .gitignore . --fix",
+    "test": "jest"
   },
   "type": "module",
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@sveltejs/adapter-node": "^1.0.0-next.72",
     "@sveltejs/kit": "next",
     "@types/d3-dsv": "^3.0.0",
+    "@types/jest": "^27.4.1",
     "@types/mapbox-gl": "^2.6.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
@@ -29,6 +31,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-svelte3": "^3.4.0",
+    "jest": "^27.5.1",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
@@ -37,6 +40,7 @@
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
     "tailwindcss": "^3.0.23",
+    "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
     "typescript": "~4.5.4"
   },
