--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-svelte3": "^3.4.0",
     "jest": "^27.5.1",
     "postcss": "^8.4.6",
+    "postcss-custom-media": "^8.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
     "svelte": "^3.44.0",
