--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Run Jest tests
         uses: actions/setup-node@v3
         with:
-          node-version: [16.x]
+          node-version: 16.x
           cache: "npm"
       - run: |
           npm ci
