--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
   "parser": "@typescript-eslint/parser",
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "plugins": ["svelte3", "@typescript-eslint", "prettier"],
+  "ignorePatterns": ["*.cjs"],
   "overrides": [{ "files": ["*.svelte"], "processor": "svelte3/svelte3" }],
   "settings": {
     "svelte3/typescript": "() => require('typescript')"
