--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@sveltejs/adapter-auto": "^1.0.0-next.33",
     "@sveltejs/adapter-node": "^1.0.0-next.72",
     "@sveltejs/kit": "^1.0.0-next.299",
