--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint:prettier": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
-    "lint:eslint": "eslint --ignore-path .gitignore .",
+    "lint:eslint": "eslint --ignore-path .gitignore . --max-warnings=0",
     "format:prettier": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "format:eslint": "eslint --ignore-path .gitignore . --fix",
     "test": "jest"
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-only-warn": "^1.0.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-svelte3": "^3.4.0",
     "jest": "^27.5.1",
