Add workaround for Sveltekit 3726

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "svelte-kit dev -p 28100",
     "build": "svelte-kit build",
-    "build-node": "export SKADAPTER=node && svelte-kit build",
+    "build-node": "export SKADAPTER=node && svelte-kit build && ./workaround-sveltekit-3726.sh",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
