env config files for prod/develop specific builds
Add env config files for develop and prod environments that
override defaults when building for these envs. Currently only
the VITE_API_BASE_URL is added (which ensures prod deployments
talk to the prod geodata api and develop deployments to the develop
geodata api).

Refactor package.json, Makefile and build.sh scripts to source
appropriate env-specific .env file when building. Build.sh
looks at git history to determine env (develop branch = develop env,
master branch = prod env, anything else uses default local development
config)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "svelte-kit dev -p 28100",
     "build": "svelte-kit build",
-    "build-node": "export SKADAPTER=node && svelte-kit build && ./workaround-sveltekit-3726.sh",
+    "build-node-develop": ". ./develop.env && svelte-kit build && ./workaround-sveltekit-3726.sh",
+    "build-node-prod": ". ./production.env && svelte-kit build && ./workaround-sveltekit-3726.sh",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
