--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@mapbox/tilebelt": "^1.0.2",
     "@sveltejs/adapter-auto": "^1.0.0-next.33",
     "@sveltejs/adapter-node": "^1.0.0-next.72",
     "@sveltejs/kit": "^1.0.0-next.299",
