--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,11 +7,6 @@
     "dbaeumer.vscode-eslint",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
-    "gruntfuggly.todo-tree",
-    "ms-vsliveshare.vsliveshare",
-    "sleistner.vscode-fileutils",
-    "svelte.svelte-vscode",
-    "visualstudioexptteam.vscodeintellicode",
-    "Orta.vscode-jest"
+    "svelte.svelte-vscode"
   ]
 }
