--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@mapbox/tilebelt": "^1.0.2",
     "@ons/design-system": "^45.2.2",
     "d3-dsv": "^2.0.0",
     "fuse.js": "^3.6.1",
