--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:eslint": "eslint --ignore-path .gitignore . --max-warnings=0",
     "format:prettier": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "format:eslint": "eslint --ignore-path .gitignore . --fix",
-    "test": "jest"
+    "test": "vitest run"
   },
   "type": "module",
   "devDependencies": {
@@ -45,7 +45,8 @@
     "tailwindcss": "^3.0.23",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
-    "typescript": "~4.5.4"
+    "typescript": "~4.5.4",
+    "vitest": "^0.12.4"
   },
   "dependencies": {
     "@mapbox/tilebelt": "^1.0.2",
