--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
     "paths": {
       "$lib": ["src/lib"],
       "$lib/*": ["src/lib/*"]
-    }
+    },
+    "types": ["vitest/globals"]
   },
   "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
 }
