--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "d3-dsv": "^2.0.0",
     "fuse.js": "^3.6.1",
     "mapbox-gl": "^1.13.2",
+    "mem": "^9.0.2",
     "normalize.css": "^8.0.1",
+    "quick-lru": "^6.1.1",
     "rxjs": "^7.5.4",
     "svelte-i18n": "^3.3.13"
   }
