--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ node_modules
 .env.*
 !.env.example
 coverage/
+content/env
+content/**/*.pyc
+content/metadata_files/*
+!content/metadata_files/keep.me
+content/content_jsons/*
+!content/content_jsons/keep.me
 
 # Mac
 .DS_Store
