--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:netlify": ". env/netlify.sh && npm run build",
     "build:sandbox": ". env/sandbox.sh && npm run build && ./workaround-sveltekit-3726.sh",
     "build:prod": ". env/prod.sh && npm run build && ./workaround-sveltekit-3726.sh",
+    "build:publishing": ". env/pub.sh && npm run build && ./workaround-sveltekit-3726.sh",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
