simplify ons build rules to single target
- As we now can use config from the runtime env to change app
behaviour, we do not need seperate build rules for seperate ONS
envs. Make, NPM and the build scripts have been simplified to
reflect this.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dev": ". env/dev.sh && svelte-kit dev -p 28100",
     "build": "svelte-kit build",
     "build:netlify": ". env/netlify.sh && npm run build",
-    "build:sandbox": ". env/sandbox.sh && npm run build && ./workaround-sveltekit-3726.sh",
-    "build:prod": ". env/prod.sh && npm run build && ./workaround-sveltekit-3726.sh",
+    "build:ons": ". env/ons.sh && npm run build && ./workaround-sveltekit-3726.sh",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
