--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/d3-dsv": "^3.0.0",
     "@types/jest": "^27.4.1",
     "@types/mapbox-gl": "^2.6.1",
+    "@types/pym.js": "^1.3.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.2",
@@ -61,6 +62,7 @@
     "fuse.js": "^3.6.1",
     "mapbox-gl": "^1.13.2",
     "normalize.css": "^8.0.1",
+    "pym.js": "^1.3.2",
     "rxjs": "^7.5.4",
     "svelte-i18n": "^3.3.13",
     "svelte-select": "^4.4.7"
