--- a/package.json
+++ b/package.json
@@ -1,69 +1,59 @@
 {
-  "name": "svelteapp",
+  "name": "dp-census-maps",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "tsc": "tsc --noEmit",
-    "dev": ". env/dev.sh && svelte-kit dev -p 28100",
-    "build": "svelte-kit build",
+    "dev": ". env/dev.sh && vite dev",
+    "build": "vite build",
     "build:dev": ". env/dev.sh && npm run build",
     "build:netlify": ". env/netlify.sh && npm run build",
     "build:ons": ". env/ons.sh && npm run build && ./workaround-sveltekit-3726.sh",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint:prettier": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
-    "lint:eslint": "eslint --ignore-path .gitignore . --max-warnings=0",
-    "format:prettier": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "format:eslint": "eslint --ignore-path .gitignore . --fix",
     "serve-local-content-jsons": "http-server content/content_jsons -p 8090 --cors",
-    "test": ". env/test.sh && vitest run"
+    "preview": "vite preview",
+    "test": ". env/test.sh && vitest run",
+    "test:ui": "playwright test",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.25.0",
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-node": "^1.0.0-next.96",
+    "@sveltejs/kit": "next",
+    "@types/jest": "^29.1.1",
+    "@types/mapbox-gl": "^2.7.6",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "autoprefixer": "^10.4.12",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "jest": "^29.1.2",
+    "postcss": "^8.4.17",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
+    "svelte": "^3.44.0",
+    "svelte-check": "^2.7.1",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.8",
+    "tslib": "^2.3.1",
+    "typescript": "^4.7.4",
+    "vite": "^3.1.0",
+    "vitest": "^0.23.4"
   },
   "type": "module",
-  "devDependencies": {
-    "@mapbox/tilebelt": "^1.0.2",
-    "@sveltejs/adapter-auto": "^1.0.0-next.33",
-    "@sveltejs/adapter-node": "^1.0.0-next.72",
-    "@sveltejs/kit": "^1.0.0-next.299",
-    "@types/d3-dsv": "^3.0.0",
-    "@types/jest": "^27.4.1",
-    "@types/mapbox-gl": "^2.6.1",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "autoprefixer": "^10.4.2",
-    "cssnano": "^5.1.5",
-    "dotenv": "^16.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-only-warn": "^1.0.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-svelte3": "^3.4.0",
-    "http-server": "^14.1.1",
-    "jest": "^27.5.1",
-    "postcss": "^8.4.6",
-    "postcss-custom-media": "^8.0.0",
-    "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.6.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.10.1",
-    "tailwindcss": "^3.0.23",
-    "ts-jest": "^27.1.3",
-    "tslib": "^2.3.1",
-    "typescript": "~4.5.4",
-    "vitest": "^0.12.4"
-  },
   "dependencies": {
-    "@ons/design-system": "^45.2.2",
     "@turf/bbox-polygon": "^6.5.0",
     "@turf/boolean-intersects": "^6.5.0",
-    "d3-dsv": "^2.0.0",
-    "fuse.js": "^3.6.1",
+    "d3-dsv": "^3.0.1",
     "mapbox-gl": "^1.13.2",
-    "normalize.css": "^8.0.1",
     "pym.js": "^1.3.2",
-    "rxjs": "^7.5.4",
-    "svelte-i18n": "^3.3.13",
+    "rxjs": "^7.5.7",
+    "svelte-i18n": "^3.4.0",
     "svelte-select": "^4.4.7"
   }
 }
