--- a/scripts/content/.gitignore
+++ b/scripts/content/.gitignore
@@ -6,3 +6,4 @@
 !/input_metadata_files/Atlas_legend_strings.csv
 !/input_metadata_files/Atlas_variables_short_descriptions.csv
 !/input_metadata_files/Rich_content_product_specifications.csv
+!/input_metadata_files/Available_geotypes_for_variables.csv
