--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "tsc": "tsc --noEmit",
-    "dev": ". env/dev.sh && vite dev",
+    "serve-local-content-jsons": "http-server scripts/content/output_content_jsons -p 8090 --cors",
+    "dev": "npm run serve-local-content-jsons & . env/dev.sh && vite dev",
     "build": "vite build",
     "build:dev": ". env/dev.sh && npm run build",
     "build:netlify": ". env/netlify.sh && npm run build",
     "build:ons": ". env/ons.sh && npm run build && ./workaround-sveltekit-3726.sh",
-    "serve-local-content-jsons": "http-server content/content_jsons -p 8090 --cors",
     "preview": "vite preview",
     "test": ". env/test.sh && vitest run",
     "test:ui": "playwright test",
@@ -33,6 +33,7 @@
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "http-server": "^14.1.1",
     "jest": "^29.1.2",
     "postcss": "^8.4.17",
     "prettier": "^2.6.2",
