--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "devDependencies": {
     "@mapbox/tilebelt": "^1.0.2",
+    "@mapbox/vector-tile": "^1.3.1",
     "@playwright/test": "^1.25.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-node": "^1.0.0-next.96",
     "@sveltejs/kit": "next",
+    "@turf/boolean-point-in-polygon": "^6.5.0",
     "@types/jest": "^29.1.1",
     "@types/mapbox-gl": "^2.7.6",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -35,6 +37,7 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "http-server": "^14.1.1",
     "jest": "^29.1.2",
+    "pbf": "^3.2.1",
     "postcss": "^8.4.17",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
