--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "build:ons": ". env/ons.sh && npm run build && ./workaround-sveltekit-3726.sh",
     "preview": "vite preview",
     "test": ". env/test.sh && vitest run",
-    "test:ui": "playwright test",
+    "test:ui": "playwright test e2e/",
+    "test:ui:ci": "start-server-and-test dev http://localhost:28100 test:ui",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@playwright/test": "^1.25.0",
+    "@playwright/test": "^1.27.1",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-node": "^1.0.0-next.96",
     "@sveltejs/kit": "next",
@@ -34,9 +35,11 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "http-server": "^14.1.1",
     "jest": "^29.1.2",
+    "playwright": "^1.27.1",
     "postcss": "^8.4.17",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
+    "start-server-and-test": "^1.14.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
     "svelte-preprocess": "^4.10.7",
