Use e2e name for UI tests and update readme

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build:ons": ". env/ons.sh && npm run build && ./workaround-sveltekit-3726.sh",
     "preview": "vite preview",
     "test": ". env/test.sh && vitest run src/",
-    "test:ui": "playwright test e2e/",
-    "test:ui:ci": "start-server-and-test dev http://localhost:28100 test:ui",
+    "e2e": "playwright test e2e/",
+    "e2e:ci": "start-server-and-test dev http://localhost:28100 e2e",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
