new content scripts + content
- refactor content scripts to use new Atlas_content_and_releases.json
to define what content is in the atlas and what release it is in
(this replaces the Rich content spec sheet). This change needed as
releases were becoming more complicated and not just
'one-topic-one-release'
- use new content / release spec sheet to split 'Welsh skills' off
from main 'EILR' release
- update content with latest metadata
(ar2776-c21ew_metadata-v1-3_cantab_20221111-29, v6 in our system)

--- a/scripts/content/.gitignore
+++ b/scripts/content/.gitignore
@@ -7,3 +7,4 @@
 !/input_metadata_files/Atlas_variables_short_descriptions.csv
 !/input_metadata_files/Rich_content_product_specifications.csv
 !/input_metadata_files/Available_geotypes_for_classifications.csv
+!/input_metadata_files/Atlas_content_and_releases.json
