--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.12",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
