--- a/scripts/content/.gitignore
+++ b/scripts/content/.gitignore
@@ -9,3 +9,4 @@
 !/input_metadata_files/Available_geotypes_for_classifications.csv
 !/input_metadata_files/Atlas_content_and_releases.json
 !/input_metadata_files/Atlas_variables_caveats.csv
+!/input_metadata_files/Atlas_classification_data_downloads.csv
