refactor content scripts
- move all classes, factories and associated logic for each
census object into files in /models
- move general code into lib.py
- simplfiy make_content_jsons.py by making better use of class
methods for census objects
- add full end-to-end/regression test for make_content_jsons.py
based on last good output from old version of script
- use pyenv and pipenv to control dependencies, including python
version.
- update readme

Misc
- remove uneccessary 'dataset' property from census classifications.
This was not used in the front end, and was a guess most of the time
anyway as only some classifications have a proper dataset.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,9 @@
     "editor.defaultFormatter": "svelte.svelte-vscode"
   },
   "jest.showCoverageOnLoad": true,
-  "jest.jestCommandLine": "npm test --"
+  "jest.jestCommandLine": "npm test --",
+  "python.formatting.provider": "autopep8",
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.python"
+  }
 }
