--- a/ci/component.yml
+++ b/ci/component.yml
@@ -5,7 +5,7 @@ image_resource:
   type: docker-image
   source:
     repository: node
-    tag: latest
+    tag: 18
 
 inputs:
   - name: dp-census-atlas
