--- a/scripts/content/.gitignore
+++ b/scripts/content/.gitignore
@@ -8,3 +8,4 @@
 !/input_metadata_files/variable_caveats.csv
 !/input_metadata_files/variable_map_type_default_classifications.csv
 !/input_metadata_files/variable_short_descriptions.csv
+/**/*.zip
