--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.27.1",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-node": "^1.0.0-next.96",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-auto": "^1.0.0",
+    "@sveltejs/adapter-node": "^1.1.0",
+    "@sveltejs/kit": "^1.0.11",
     "@types/jest": "^29.1.1",
     "@types/mapbox-gl": "^2.7.6",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -40,13 +40,13 @@
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "start-server-and-test": "^1.14.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.7.1",
-    "svelte-preprocess": "^4.10.7",
+    "svelte": "^3.55.1",
+    "svelte-check": "^3.0.2",
+    "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.2",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
-    "vite": "^3.1.0",
+    "vite": "^4.0.0",
     "vitest": "^0.23.4"
   },
   "type": "module",
