change to txt from html

--- a/scripts/mktiles/Makefile
+++ b/scripts/mktiles/Makefile
@@ -17,7 +17,7 @@ mktiles2:	## compile mktiles2
 clean:: ## remove generated files that should not be committed
 	rm -f mktiles2
 
-mktiles2.md: mktiles2.mandoc	## generate mktiles2 markdown
+mktiles2.md: mktiles2.mandoc	## generate mktiles2 markdown (mandoc is buggy :( )
 	$(MANDOC) -W warning -T markdown < mktiles2.mandoc > mktiles2.md.new
 	mv mktiles2.md.new mktiles2.md
 clean::
@@ -25,11 +25,23 @@ clean::
 
 .PHONY: man
 man:	## display s3sync man page on terminal
-	groff -mandoc -t -Tascii mktiles2.mandoc |less
+	groff -mandoc -Tascii mktiles2.mandoc |less
 
 .PHONY: pdf
 pdf:	## generate pdf man page
-	groff -mandoc -t -Tps -P-pa4 -pdfmark mktiles2.mandoc | ps2pdf - - > mktiles2.pdf.new
+	groff -mandoc -Tps -P-pa4 -pdfmark mktiles2.mandoc | ps2pdf - - > mktiles2.pdf.new
 	mv mktiles2.pdf.new mktiles2.pdf
 clean::
 	rm -f mktiles2.pdf.new mktiles2.pdf
+
+.PHONY: html
+html:	## generate html man page (in lieu of markdown for now)
+	$(MANDOC) -W warning -T html < mktiles2.mandoc > mktiles2.html.new
+	mv mktiles2.html.new mktiles2.html
+clean::
+	rm -f mktiles2.html.new
+
+.PHONY: txt
+txt:	## generate txt man page (because html doesn't auto render on github)
+	groff -mandoc -Tascii mktiles2.mandoc > mktiles2.txt.new
+	mv mktiles2.txt.new mktiles2.txt
