--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "tsc": "npx tsc --noEmit",
-    "serve-local-content-jsons": "http-server scripts/content/output_content_jsons -p 8090 --cors",
-    "dev": "npm run serve-local-content-jsons & . env/dev.sh && vite dev",
+    "dev": ". env/dev.sh && vite dev",
     "build": "vite build",
     "build:dev": ". env/dev.sh && npm run build",
     "build:netlify": ". env/netlify.sh && npm run build",
@@ -33,7 +32,6 @@
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "http-server": "^14.1.1",
     "jest": "^29.1.2",
     "playwright": "^1.27.1",
     "postcss": "^8.4.17",
