--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "http-server": "^14.1.1",
     "jest": "^29.1.2",
-    "playwright": "^1.27.1",
+    "playwright": "~1.27.1",
     "postcss": "^8.4.17",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
