--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@playwright/test": "^1.27.1",
     "@sveltejs/adapter-auto": "^1.0.0",
+    "@sveltejs/adapter-netlify": "^1.0.5",
     "@sveltejs/adapter-node": "^1.1.0",
     "@sveltejs/kit": "^1.2.9",
     "@types/jest": "^29.1.1",
