--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "scripts": {
     "tsc": "npx tsc --noEmit",
-    "serve-local-content-jsons": "http-server scripts/content/output_content_jsons -p 8090 --cors",
-    "dev": "npm run serve-local-content-jsons & . env/dev.sh && vite dev",
+    "dev": ". env/dev.sh && vite dev",
     "build": "vite build",
     "build:dev": ". env/dev.sh && npm run build",
     "build:netlify": ". env/netlify.sh && npm run build",
-    "build:ons": ". env/ons.sh && npm run build && ./workaround-sveltekit-3726.sh",
+    "build:ons": ". env/ons.sh && npm run build",
     "preview": "vite preview",
     "test": ". env/test.sh && vitest run src/",
     "e2e": "playwright test e2e/",
@@ -22,6 +21,7 @@
   "devDependencies": {
     "@playwright/test": "^1.27.1",
     "@sveltejs/adapter-auto": "^1.0.0",
+    "@sveltejs/adapter-netlify": "^1.0.5",
     "@sveltejs/adapter-node": "^1.1.0",
     "@sveltejs/kit": "^1.2.9",
     "@types/jest": "^29.1.1",
@@ -33,7 +33,6 @@
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "http-server": "^14.1.1",
     "jest": "^29.1.2",
     "playwright": "^1.27.1",
     "postcss": "^8.4.17",
@@ -46,8 +45,8 @@
     "tailwindcss": "^3.2",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
-    "vite": "^4.0.0",
-    "vitest": "^0.23.4"
+    "vite": "^4.1.1",
+    "vitest": "^0.28.4"
   },
   "type": "module",
   "dependencies": {
