--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "tsc": "npx tsc --noEmit",
-    "dev": ". env/dev.sh && vite dev",
+    "dev": ". env/local.sh && vite dev",
     "build": "vite build",
     "build:dev": ". env/dev.sh && npm run build",
     "build:netlify": ". env/netlify.sh && npm run build",
