add minimal homePage-loads component test for CI

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "preview": "vite preview",
     "test": ". env/test.sh && vitest run src/",
     "e2e": "playwright test e2e/",
-    "e2e:ci": "start-server-and-test dev http://localhost:28100 e2e",
+    "e2e:minimal": "playwright test e2e/homePage.spec.ts",
+    "e2e:ci": "start-server-and-test dev http://localhost:28100 e2e:minimal",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
