--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "pym.js": "^1.3.2",
     "rxjs": "^7.5.7",
     "svelte-select": "^4.4.7",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "topojson-client": "^3.1.0"
   }
 }
