--- a/scripts/content/.gitignore
+++ b/scripts/content/.gitignore
@@ -9,4 +9,5 @@
 !/input_metadata_files/variable_short_descriptions.csv
 !/input_metadata_files/variable_tile_data_base_urls.csv
 !/input_metadata_files/classification_mode_specific_notes.csv
+!/input_metadata_files/variable_units.csv
 /**/*.zip
